Qulitative task in English

--- a/Qualitative_tasks/Task2_regulacion_universidades_institutos.tex
+++ b/Qualitative_tasks/Task2_regulacion_universidades_institutos.tex
@@ -1,24 +1,30 @@
 \documentclass[11pt,a4paper]{article}
-\usepackage[latin1]{inputenc}
-\usepackage[spanish]{babel}
+\usepackage [latin1]{inputenc}
+\usepackage[english]{babel}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage[left=4cm,right=3cm,top=2.5cm,bottom=2.5cm]{geometry}
 \usepackage{indentfirst}
-\title{Marco Legal que Regula la Creación de Universidades e Institutos}
+
+\title{Legal Framework for the creation of higher-education institutions}
 \author{Lucia Gomez Lactahuamani}
 \date{}
 \begin{document}
 \maketitle
 
-Antes de 1995, la Ley N° 23733, Ley Universitaria, regulaba la existencia de universidades públicas y universidades privadas sin fines de lucro. Disponía que las universidades se creaban solo por ley, previa acreditación de su necesidad, la disponibilidad de personal docente calificado y los recursos que aseguren la eficiencia de los servicios. Asimismo, establecía que las universidades no podían contar con filiales ni anexos; excepcionalmente, las universidades podían crear facultades, dentro del ámbito departamental de la universidad. \par
-En 1995, mediante Ley N° 26439 se crea el Consejo Nacional para la Autorización del Funcionamiento de Universidades (CONAFU), órgano autónomo de la Asamblea Nacional de Rectores (ANR)\footnote{La ANR era un organismo público y autónomo creada por Ley N° 23733, constituido por los rectores de las universidades.}, que tenía entre sus atribuciones el evaluar y autorizar el funcionamiento de las nuevas universidades. En el caso de las universidades públicas, además de la evaluación de la CONAFU, se requería la ley de creación y la evaluación por parte del Ministerio de Economía y Finanzas (MEF) sobre la capacidad del Estado para financiar su funcionamiento. \par
-Con el objeto de modernizar el sistema y ampliar la cobertura, en 1996, se publica el Decreto Legislativo N° 882, Ley de Promoción de la Inversión en la Educación. Se facultaba a toda persona natural o jurídica fundar y gestionar universidades particulares con o sin finalidad lucrativa. La CONAFU se encargaba de la evaluación y La autorización de funcionamiento de estas. \par
-Posteriormente, en el 2001 mediante Ley N° 27540, Ley que regula la creación de filiales universitarias y otorga facultades adicionales a la ANR, se autoriza la creación de filiales universitarias fuera del ámbito departamental de su creación bajo regulación de la ANR. La ausencia de una entidad que promueva políticas de calidad académica generó la explosión de filiales universitarias sin infraestructura adecuada \cite{depaz2006universidad}. En el 2005, mediante Ley N° 28564, se prohíbe nuevamente la creación de filiales universitarias. \par
-Finalmente, en el 2012, se promulga la Ley 29971, Ley que establece la moratoria de creación de universidades públicas y privadas y de sus filiales por un periodo de 5 años. La finalidad era permitir que se replantee la política de educación superior universitaria, hacia uno que establezca requisitos de creación y funcionamiento de universidades debidamente acreditadas y certificadas que garanticen calidad, investigación y vinculación con las necesidades de desarrollo del país. \par
-Respecto al marco legal que regula la creación de institutos y escuelas de educación superior no universitaria, existen variedad de normas de distinto nivel; se identifican como marcos legales de aplicación general al Decreto Legislativo N ° 882 y la Ley N° 29394, Ley de Institutos y Escuelas de Educación superior. Similar al caso de las universidades, el Decreto Legislativo N° 882 posibilita a personas naturales o jurídicas  fundar y gestionar institutos y escuelas superiores particulares con o sin finalidad lucrativa, correspondiendo al Ministerio de Educación autorizar su funcionamiento.  La Ley N° 29394 publicada en el 2009 establece que, los institutos y escuelas públicos se crean con resolución suprema, previa opinión favorable de la dirección regional de educación correspondiente y del MEF; mientras que, los institutos y escuelas privados se crean por iniciativa de particulares, sean personas naturales o jurídicas. En ambos casos, la autorización de funcionamiento y su revalidación requiere de la aprobación del Ministerio de Educación \footnote{La autorización de funcionamiento de los institutos y Escuela se otorga por un periodo no menor de 3 años ni mayor de 6 años.}. Adicionalmente, se dispone que el ámbito de funcionamiento de los institutos y escuelas es el provincial, no se puede crear filiales ni anexos fuera del ámbito de funcionamiento. 
+Before 1995, Law N° 23733, University Law, regulated the existence of public universities and private non-profit universities. It stated that universities were created only by law, with prior accreditation of their need, the availability of qualified staff and the resources to ensure the efficiency of services. Likewise, it established that universities could not have subsidiaries or annexes; exceptionally, universities could create faculties, within the departmental scope of the university.
+
+In 1995, through Law N° 26439, the National Council for the Authorization of the Functioning of Universities (CONAFU) was established, an autonomous body of the National Assembly of Rectors (ANR),\footnote{The ANR was a public and autonomous body created by Law N° 23733, constituted by the rectors of the universities.} which had among its attributions to evaluate and authorize the operation of the new universities. In the case of public universities, beside the evaluation of CONAFU were required the creation law and the evaluation by the Ministry of Economy and Finance (MEF) on the capacity of the State to finance its operation.
+
+In order to modernize the system and expand coverage, in 1996, Legislative Decree N° 882, Law for the Promotion of Investment in Education, was passed. Any natural or legal person was allowed to found and manage private universities with or without profit. CONAFU was in charge of the evaluation and authorization of their operation. 
+
+Later, in 2001, under Law N° 27540, Law that regulates the creation of university affiliates and grants additional powers to the ANR, the creation of university affiliates outside the departmental scope of their creation is authorized under the ANR regulation. The absence of an entity that promotes academic quality policies generated the explosion of university affiliates without adequate infrastructure \cite{depaz2006universidad}. In 2005, through Law N° 28564, the creation of university affiliates was again prohibited.
+
+Finally, in 2012, Law N° 29971 was enacted, a Law that established the moratorium on the creation of public and private universities and their subsidiaries for a period of 5 years. The purpose was to allow the university higher education policy to be reformed, towards one that establishes requirements for the creation and operation of duly accredited and certified universities that guarantee quality, research and relation with the country's development needs.
+ 
+Regarding the legal framework that regulates the creation of non-university higher education institutes and schools in 1995-2012 period, there were a bunch of regulations at different levels; Legislative Decree N° 882 and Law N° 29394, Law of Institutes and Schools of Higher Education, are identified as legal frameworks of general application. Similar to the case of universities, Legislative Decree N° 882 enabled natural or legal persons to found and manage private institutes and higher schools with or without profit-making purposes, corresponding to the Ministry of Education to authorize their operation. Law N° 29394 published in 2009 stated that public institutes and schools were created with supreme resolution, with the prior favorable opinion of the corresponding regional education department and the MEF; while private institutes and schools were created at the initiative of individuals, whether natural or legal persons. In both cases, the authorization of operation and its revalidation required the approval of the Ministry of Education.\footnote{The authorization of operation of the institutes and School is granted for a period of no less than 3 years and no longer than 6 years.} Additionally, it is established that the scope of operation of the institutes and schools was the provincial one; any subsidiaries or annexes could not be created outside the scope of operation. 
 
 \bibliographystyle{apalike}
 \bibliography{bibliography}
